--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ before_script:
   - sudo apt-get update
   - sudo apt-get install mysql-server -y
   - sudo mysql_install_db
-  - mysql -e 'create database test;'
+  - mysql -u root -e 'create database test;'
 install:
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
