--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ dist: trusty
 osx_image: xcode7.3
 before_script:
   - sudo apt-get update
-  - sudo apt-get install mysql-server -y
+  - sudo apt-get install -y mysql-server libmysqld-dev
   - sudo mysql_install_db
   - mysql -u root -e 'create database test;'
 install:
