--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_script:
 install:
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
-  # Build Fluent MySQL
+  # Build MySQL
   - swift build
   - swift build --configuration release
-  # Test Fluent MySQL
+  # Test MySQL
   - swift test
   
