--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,9 @@ language: generic
 sudo: required
 dist: trusty
 osx_image: xcode7.3
-before_script:
-  - sudo apt-get update
-  - sudo apt-get install -y mysql-server libmysqld-dev
-  - sudo mysql_install_db
-  - mysql -u root -e 'create database test;'
 install:
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get update; sudo apt-get install -y mysql-server libmysqld-dev; sudo mysql_install_db; fi
+  - mysql -u root -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
   # Build MySQL
