--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ sudo: required
 dist: trusty
 osx_image: xcode7.3
 install:
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get update; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get install -y mysql-server libmysqld-dev; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo mysql_install_db; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -y mysql-server libmysqld-dev; fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo mysql_install_db; fi
   - mysql -u root -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
