brew mysql + readme

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ install:
   # - sudo apt-get install -y mysql-server libmysqlclient-dev
   # - sudo mysql_install_db
   # - mysql -u root --password="" -e 'create database test;'
+  - brew install mysql
+  - mysql -u root --password="" -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
   # Build MySQL
