--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ install:
   # - sudo mysql_install_db
   # - mysql -u root --password="" -e 'create database test;'
   - brew install mysql
+  - brew services start mysql
   - mysql -u root --password="" -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
