--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,15 @@ sudo: required
 dist: trusty
 osx_image: xcode7.3
 install:
-  # - sudo apt-get update
-  # - sudo apt-get install -y mysql-server libmysqlclient-dev
-  # - sudo mysql_install_db
-  # - mysql -u root --password="" -e 'create database test;'
-  - brew install mysql
-  - brew services start mysql
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      brew install mysql
+      mysql.server start
+    fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      sudo apt-get update
+      sudo apt-get install -y mysql-server libmysqlclient-dev
+      sudo mysql_install_db
+    fi
   - mysql -u root --password="" -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
