--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ dist: trusty
 osx_image: xcode7.3
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      brew install mysql
-      mysql.server start
+      brew install mysql;
+      mysql.server start;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
-      sudo apt-get update
-      sudo apt-get install -y mysql-server libmysqlclient-dev
-      sudo mysql_install_db
+      sudo apt-get update;
+      sudo apt-get install -y mysql-server libmysqlclient-dev;
+      sudo mysql_install_db;
     fi
   - mysql -u root --password="" -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
