--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,15 @@ install:
   - mysql -u root --password="" -e 'create database test;'
   - eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"
 script:
-  # Build MySQL
-  - swift build
-  - swift build --configuration release
+  # Build MySQL 
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+    swift build -Xlinker -L/usr/local/mysql/lib
+    swift build --configuration release -Xlinker -L/usr/local/mysql/lib
+  fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+    swift build
+    swift build --configuration release
+  fi
   # Test MySQL
   - swift test
   
