--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ osx_image: xcode7.3
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew install mysql;
+      brew link mysql;
       mysql.server start;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -20,8 +21,8 @@ install:
 script:
   # Build MySQL 
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      swift build -Xlinker -L/usr/local/mysql/lib;
-      swift build --configuration release -Xlinker -L/usr/local/mysql/lib;
+      swift build;
+      swift build --configuration release -Xlinker;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       swift build;
