--- a/.travis.yml
+++ b/.travis.yml
@@ -7,16 +7,9 @@ dist: trusty
 osx_image: xcode7.3
 install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      ls /usr/local/lib/;
-      ls /usr/local/include/mysql/;
-      ls /usr/local/opt/;
-      ls /usr/include;
       brew install mysql;
       brew link mysql;
-      ls /usr/local/lib/;
       ls /usr/local/include/mysql/;
-      ls /usr/local/opt/;
-      ls /usr/include;
       mysql.server start;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
@@ -29,8 +22,8 @@ install:
 script:
   # Build MySQL 
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      swift build -Xcc -I/usr/local/include -Xswiftc -I/usr/local/include -Xlinker -L/usr/local/lib;
-      swift build --configuration release -Xcc -I/usr/local/include -Xswiftc -I/usr/local/include -Xlinker -L/usr/local/lib;
+      swift build -Xcc -I/usr/local/include/mysql -Xswiftc -I/usr/local/include/mysql -Xlinker -L/usr/local/lib;
+      swift build --configuration release -Xcc -I/usr/local/include/mysql -Xswiftc -I/usr/local/include/mysql -Xlinker -L/usr/local/lib;
     fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       swift build;
