--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,11 @@ sudo: required
 dist: trusty
 osx_image: xcode8
 install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710    e83cd0bbe7dcdf/swiftenv-install.sh)"; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"; fi
 script:
   # Build Console 
-  - swift build -Xswiftc -DSimple;
-  - swift build --configuration release -Xswiftc -DSimple
+  - swift build -XSwiftc -DSimple;
+  - swift build --configuration release -XSwiftc -DSimple
   # Test Console
-  - swift test -Xswiftc -DSimple
+  - swift test -XSwiftc -DSimple
   
