--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then eval "$(curl -sL https://gist.githubusercontent.com/kylef/5c0475ff02b7c7671d2a/raw/02090c7ede5a637b76e6df1710e83cd0bbe7dcdf/swiftenv-install.sh)"; fi
 script:
   # Build Console 
-  - swift build -XSwiftc -DSimple;
-  - swift build --configuration release -XSwiftc -DSimple
+  - swift build -Xswiftc -DSimple
+  - swift build --configuration release -Xswiftc -DSimple
   # Test Console
-  - swift test -XSwiftc -DSimple
+  - swift test -Xswiftc -DSimple
   
