--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,6 @@ language: generic
 sudo: required
 dist: trusty
 osx_image: xcode8
-install:
-  - eval "$(curl -sL swift.qutheory.io/travis)"
 script:
-  # Build Console
-  - swift build -Xswiftc -DNO_ANIMATION
-  - swift build --configuration release -Xswiftc -DNO_ANIMATION
-  # Test Console
-  - swift test
+  - eval "$(curl -sL swift.vapor.sh/ci)"
+  - eval "$(curl -sL swift.vapor.sh/codecov)"
