--- a/circle.yml
+++ b/circle.yml
@@ -1,15 +1,40 @@
-dependencies:
-  override:
-    - eval "$(curl -sL https://apt.vapor.sh)"
-    - sudo apt-get install swift
-    - sudo chmod -R a+rx /usr/
-test:
-  override:
-    - swift build
-    - swift build -c release
-    - swift test
-    - sudo apt-get remove swift
-    - sudo apt-get install swift-beta
-    - swift build
-    - swift build -c release
-    - swift test
+version: 2
+
+jobs:
+  macos:
+    macos:
+      xcode: "9.0"
+    steps:
+      - run: brew install vapor/tap/vapor
+      - checkout
+      - run: swift build
+      - run: swift test
+
+  linux:
+    docker:
+      - image: swift:4.0
+    steps:
+      - run: apt-get install -y libssl-dev
+      - checkout
+      - run: swift build
+      - run: swift test
+
+  # 3.1 backward compat checks
+
+  linux-3:
+    docker:
+      - image: swift:3.1
+    steps:
+      - run: apt-get update
+      - run: apt-get install -y libssl-dev
+      - checkout
+      - run: swift build
+      - run: swift test
+
+workflows:
+  version: 2
+  tests:
+    jobs:
+      - linux
+      - linux-3
+      - macos
