--- a/circle.yml
+++ b/circle.yml
@@ -8,17 +8,58 @@ jobs:
       - checkout
       - run: swift build
       - run: swift test
+
   linux:
     docker:
-      - image: norionomura/swift:swift-4.1-branch
+      - image: codevapor/swift:4.1
     steps:
       - checkout
-      - run: swift build
-      - run: swift test
-      - run: swift build -c release
+      - run: 
+          name: Compile code
+          command: swift build
+      - run: 
+          name: Run unit tests
+          command: swift test
+      - run: 
+          name: Compile code with optimizations
+          command: swift build -c release
+
+
+  linux-vapor:
+    docker:
+      - image: codevapor/swift:4.1
+    steps:
+      - run:
+          name: Clone Vapor
+          command: git clone -b nio https://github.com/vapor/vapor.git
+          working_directory: ~/
+      - run:
+          name: Switch Vapor to this Console revision
+          command: swift package edit Console --revision $CIRCLE_SHA1
+          working_directory: ~/vapor
+      - run:
+          name: Run Vapor unit tests
+          command: swift test
+          working_directory: ~/vapor
+
+
 workflows:
   version: 2
   tests:
     jobs:
       - linux
+      - linux-vapor
       # - macos
+
+  nightly:
+    triggers:
+      - schedule:
+          cron: "0 0 * * *"
+          filters:
+            branches:
+              only:
+                - master
+    jobs:
+      - linux
+      # - macos
+      
