--- a/circle.yml
+++ b/circle.yml
@@ -3,14 +3,21 @@ version: 2
 jobs:
   linux:
     docker:
-      - image: codevapor/swift:5.0
+      - image: vapor/swift:5.0
     steps:
       - checkout
       - run: swift build
       - run: swift test
+  linux-release:
+    docker:
+      - image: vapor/swift:5.0
+    steps:
+      - checkout
+      - run: swift build -c release
 
 workflows:
   version: 2
   tests:
     jobs:
       - linux
+      - linux-release
