--- a/circle.yml
+++ b/circle.yml
@@ -1,23 +1,59 @@
 version: 2
 
 jobs:
-  linux:
-    docker:
-      - image: vapor/swift:5.0
+  macos:
+    macos:
+      xcode: "10.2.0"
     steps:
       - checkout
+      - run: HOMEBREW_NO_AUTO_UPDATE=1 brew install openssl@1.1
       - run: swift build
       - run: swift test
-  linux-release:
-    docker:
-      - image: vapor/swift:5.0
+  macos-release:
+    macos:
+      xcode: "10.2.0"
     steps:
       - checkout
+      - run: HOMEBREW_NO_AUTO_UPDATE=1 brew install openssl@1.1
+      - run: swift build -c release
+  bionic:
+    docker:
+      - image: swift:5.0-bionic
+    steps:
+      - checkout
+      - run: apt-get -y install openssl libssl-dev
+      - run: swift build --disable-index-store
+      - run: swift test --disable-index-store
+  bionic-release:
+    docker:
+      - image: swift:5.0-bionic
+    steps:
+      - checkout
+      - run: apt-get -y install openssl libssl-dev
+      - run: swift build -c release
+  xenial:
+    docker:
+      - image: swift:5.0-xenial
+    steps:
+      - checkout
+      - run: apt-get -y install openssl libssl-dev
+      - run: swift build --disable-index-store
+      - run: swift test --disable-index-store
+  xenial-release:
+    docker:
+      - image: swift:5.0-xenial
+    steps:
+      - checkout
+      - run: apt-get -y install openssl libssl-dev
       - run: swift build -c release
 
 workflows:
   version: 2
   tests:
     jobs:
-      - linux
-      - linux-release
+      - macos
+      - macos-release
+      - bionic
+      - bionic-release
+      - xenial
+      - xenial-release
