update tests for alpha (#112)
* update tests for alpha

* fix demo command help string

--- a/circle.yml
+++ b/circle.yml
@@ -1,16 +1,42 @@
 version: 2
 
 jobs:
-  linux:
-    docker:
-      - image: vapor/swift:5.0
+  macos:
+    macos:
+      xcode: "10.2.0"
     steps:
       - checkout
       - run: swift build
       - run: swift test
-  linux-release:
+  macos-release:
+    macos:
+      xcode: "10.2.0"
+    steps:
+      - checkout
+      - run: swift build -c release
+  bionic:
     docker:
-      - image: vapor/swift:5.0
+      - image: swift:5.0-bionic
+    steps:
+      - checkout
+      - run: swift build --disable-index-store
+      - run: swift test --disable-index-store
+  bionic-release:
+    docker:
+      - image: swift:5.0-bionic
+    steps:
+      - checkout
+      - run: swift build -c release
+  xenial:
+    docker:
+      - image: swift:5.0-xenial
+    steps:
+      - checkout
+      - run: swift build --disable-index-store
+      - run: swift test --disable-index-store
+  xenial-release:
+    docker:
+      - image: swift:5.0-xenial
     steps:
       - checkout
       - run: swift build -c release
@@ -19,5 +45,9 @@ workflows:
   version: 2
   tests:
     jobs:
-      - linux
-      - linux-release
+      - macos
+      - macos-release
+      - bionic
+      - bionic-release
+      - xenial
+      - xenial-release
