--- a/circle.yml
+++ b/circle.yml
@@ -3,40 +3,40 @@ version: 2
 jobs:
   macos:
     macos:
-      xcode: "10.2.0"
+      xcode: "11.0.0"
     steps:
       - checkout
       - run: swift build
       - run: swift test
   macos-release:
     macos:
-      xcode: "10.2.0"
+      xcode: "11.0.0"
     steps:
       - checkout
       - run: swift build -c release
   bionic:
     docker:
-      - image: swift:5.0-bionic
+      - image: vapor/swift:5.1-bionic
     steps:
       - checkout
-      - run: swift build --disable-index-store
-      - run: swift test --disable-index-store
+      - run: swift build
+      - run: swift test
   bionic-release:
     docker:
-      - image: swift:5.0-bionic
+      - image: vapor/swift:5.1-bionic
     steps:
       - checkout
       - run: swift build -c release
   xenial:
     docker:
-      - image: swift:5.0-xenial
+      - image: vapor/swift:5.1-xenial
     steps:
       - checkout
-      - run: swift build --disable-index-store
-      - run: swift test --disable-index-store
+      - run: swift build
+      - run: swift test
   xenial-release:
     docker:
-      - image: swift:5.0-xenial
+      - image: vapor/swift:5.1-xenial
     steps:
       - checkout
       - run: swift build -c release
@@ -45,8 +45,8 @@ workflows:
   version: 2
   tests:
     jobs:
-      - macos
-      - macos-release
+#      - macos
+#      - macos-release
       - bionic
       - bionic-release
       - xenial
