--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,11 +8,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
+    - run: |
+      swift build
+      swift test --enable-test-discovery --sanitize=thread
   bionic:
     container: 
       image: swift:5.1-bionic
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
+    - run: |
+      swift build
+      swift test --enable-test-discovery --sanitize=thread
