--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,28 +2,46 @@ name: test
 on:
 - pull_request
 jobs:
-  console-kit_xenial:
-    container: 
-      image: vapor/swift:5.2-xenial-ci
+  console-kit_linux:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        image: ["swift:5.2-xenial", "swift:5.2-bionic",
+                "swiftlang/swift:nightly-5.2-xenial", "swiftlang/swift:nightly-5.2-bionic",
+                "swiftlang/swift:nightly-5.3-xenial", "swiftlang/swift:nightly-5.3-bionic",
+                "swiftlang/swift:nightly-master-xenial", "swiftlang/swift:nightly-master-bionic",
+                "swiftlang/swift:nightly-master-focal", "swiftlang/swift:nightly-master-centos8",
+                "swiftlang/swift:nightly-master-amazonlinux2"]
+    container: ${{ matrix.image }}
     steps:
-    - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
-  console-kit_bionic:
-    container: 
-      image: vapor/swift:5.2-bionic-ci
-    runs-on: ubuntu-latest
+      - uses: actions/checkout@v2
+        with:
+          path: console-kit
+      - uses: actions/checkout@v2
+        with:
+          repository: vapor/vapor
+          path: vapor
+      - run: swift test --enable-test-discovery --sanitize=thread
+        working-directory: console-kit
+      - run: swift package edit console-kit --path ../console-kit
+        working-directory: vapor
+      - run: swift test --enable-test-discovery --sanitize=thread
+        working-directory: vapor
+  console-kit_macos:
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v1
-    - run: swift test --enable-test-discovery --sanitize=thread
-  vapor:
-    container: 
-      image: vapor/swift:5.2-ci
-    runs-on: ubuntu-latest
-    steps:
-    - run: git clone -b master https://github.com/vapor/vapor.git
-      working-directory: ./
-    - run: swift package edit console-kit --revision ${{ github.sha }}
-      working-directory: ./vapor
-    - run: swift test --enable-test-discovery --sanitize=thread
-      working-directory: ./vapor
+      - run: sudo xcode-select -s /Applications/Xcode_11.4.app/Contents/Developer
+      - uses: actions/checkout@v2
+        with:
+          path: console-kit
+      - uses: actions/checkout@v2
+        with:
+          repository: vapor/vapor
+          path: vapor
+      - run: swift test --enable-test-discovery --sanitize=thread
+        working-directory: console-kit
+      - run: swift package edit console-kit --path ../console-kit
+        working-directory: vapor
+      - run: swift test --enable-test-discovery --sanitize=thread
+        working-directory: vapor
