Install missing zlib dependency to the CentOS and AmazonLinux images

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,10 @@ jobs:
                 "swiftlang/swift:nightly-master-amazonlinux2"]
     container: ${{ matrix.image }}
     steps:
+      - run: dnf install zlib-devel
+        if: ${{ matrix.image == "swiftlang/swift:nightly-master-centos8" }}
+      - run: yum install zlib-devel
+        if: ${{ matrix.image == "swiftlang/swift:nightly-master-amazonlinux2" }}
       - uses: actions/checkout@v2
         with:
           path: console-kit
