--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,40 +2,43 @@ name: test
 on:
 - pull_request
 jobs:
-  console-kit_linux:
-    runs-on: ubuntu-latest
+  linux:
     strategy:
       fail-fast: false
       matrix:
-        image:
-          - swift:5.2-xenial
-          - swift:5.2-bionic
-          - swiftlang/swift:nightly-5.2-xenial
-          - swiftlang/swift:nightly-5.2-bionic
-          - swiftlang/swift:nightly-5.3-xenial
-          - swiftlang/swift:nightly-5.3-bionic
-          - swiftlang/swift:nightly-master-xenial
-          - swiftlang/swift:nightly-master-bionic
-          - swiftlang/swift:nightly-master-focal
-        include:
-          - { image: 'swiftlang/swift:nightly-master-centos8', depscmd: 'dnf install -y zlib-devel' }
-          - { image: 'swiftlang/swift:nightly-master-amazonlinux2', depscmd: 'yum install -y zlib-devel' }
-    container: ${{ matrix.image }}
+        swiftver:
+          - swift:5.2
+          - swift:5.3
+          - swiftlang/swift:nightly-5.3
+          - swiftlang/swift:nightly-master
+        swiftos:
+          - xenial
+          - bionic
+          - focal
+          - centos7
+          - centos8
+          - amazonlinux2
+    runs-on: ubuntu-latest
+    container: ${{ format('{0}-{1}', matrix.swiftver, matrix.swiftos) }}
     steps:
-      - run: ${{ matrix.depscmd }}
+      - name: SPM is incompatible with CentOS 7
+        if: ${{ matrix.swiftos == 'centos7' }}
+        run: |
+          yum install -y make libcurl-devel
+          git clone https://github.com/git/git -bv2.28.0 --depth 1 && cd git
+          make prefix=/usr -j all install NO_OPENSSL=1 NO_EXPAT=1 NO_TCLTK=1 NO_GETTEXT=1 NO_PERL=1
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
-  console-kit_macos:
+  macos:
     runs-on: macos-latest
     steps:
-      - name: Select latest available Xcode
-        uses: maxim-lobanov/setup-xcode@1.0
+      - uses: maxim-lobanov/setup-xcode@v1.1
         with: { 'xcode-version': 'latest' }
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
-  vapor-integration_linux:
+  integration-linux:
     runs-on: ubuntu-latest
-    container: swift:5.2-bionic
+    container: swift:5.3-focal
     steps:
       - uses: actions/checkout@v2
         with: { path: console-kit }
@@ -43,15 +46,14 @@ jobs:
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
-  vapor-integration_macos:
+  integration-macos:
     runs-on: macos-latest
     steps:
-      - name: Select latest available Xcode
-        uses: maxim-lobanov/setup-xcode@1.0
+      - uses: maxim-lobanov/setup-xcode@v1.1
         with: { 'xcode-version': 'latest' }
       - uses: actions/checkout@v2
-        with: { path: 'console-kit' }
+        with: { path: console-kit }
       - uses: actions/checkout@v2
-        with: { repository: 'vapor/vapor', path: 'vapor' }
+        with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
