--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,43 +2,40 @@ name: test
 on:
 - pull_request
 jobs:
-  linux:
+  console-kit_linux:
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
-        swiftver:
-          - swift:5.2
-          - swift:5.3
-          - swiftlang/swift:nightly-5.3
-          - swiftlang/swift:nightly-master
-        swiftos:
-          - xenial
-          - bionic
-          - focal
-          - centos7
-          - centos8
-          - amazonlinux2
-    runs-on: ubuntu-latest
-    container: ${{ format('{0}-{1}', matrix.swiftver, matrix.swiftos) }}
+        image:
+          - swift:5.2-xenial
+          - swift:5.2-bionic
+          - swiftlang/swift:nightly-5.2-xenial
+          - swiftlang/swift:nightly-5.2-bionic
+          - swiftlang/swift:nightly-5.3-xenial
+          - swiftlang/swift:nightly-5.3-bionic
+          - swiftlang/swift:nightly-master-xenial
+          - swiftlang/swift:nightly-master-bionic
+          - swiftlang/swift:nightly-master-focal
+        include:
+          - { image: 'swiftlang/swift:nightly-master-centos8', depscmd: 'dnf install -y zlib-devel' }
+          - { image: 'swiftlang/swift:nightly-master-amazonlinux2', depscmd: 'yum install -y zlib-devel' }
+    container: ${{ matrix.image }}
     steps:
-      - name: SPM is incompatible with CentOS 7
-        if: ${{ matrix.swiftos == 'centos7' }}
-        run: |
-          yum install -y make libcurl-devel
-          git clone https://github.com/git/git -bv2.28.0 --depth 1 && cd git
-          make prefix=/usr -j all install NO_OPENSSL=1 NO_EXPAT=1 NO_TCLTK=1 NO_GETTEXT=1 NO_PERL=1
+      - run: ${{ matrix.depscmd }}
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
-  macos:
+  console-kit_macos:
     runs-on: macos-latest
     steps:
-      - uses: maxim-lobanov/setup-xcode@v1.1
+      - name: Select latest available Xcode
+        uses: maxim-lobanov/setup-xcode@1.0
         with: { 'xcode-version': 'latest' }
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
-  integration-linux:
+  vapor-integration_linux:
     runs-on: ubuntu-latest
-    container: swift:5.3-focal
+    container: swift:5.2-bionic
     steps:
       - uses: actions/checkout@v2
         with: { path: console-kit }
@@ -46,14 +43,15 @@ jobs:
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
-  integration-macos:
+  vapor-integration_macos:
     runs-on: macos-latest
     steps:
-      - uses: maxim-lobanov/setup-xcode@v1.1
+      - name: Select latest available Xcode
+        uses: maxim-lobanov/setup-xcode@1.0
         with: { 'xcode-version': 'latest' }
       - uses: actions/checkout@v2
-        with: { path: console-kit }
+        with: { path: 'console-kit' }
       - uses: actions/checkout@v2
-        with: { repository: 'vapor/vapor', path: vapor }
+        with: { repository: 'vapor/vapor', path: 'vapor' }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
