--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,16 @@ jobs:
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
   macos:
+    strategy:
+      fail-fast: false
+      matrix:
+        xcodever:
+          - latest
+          - latest-stable
     runs-on: macos-latest
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.1
-        with: { 'xcode-version': 'latest' }
+        with: { 'xcode-version': '${{ matrix.xcodever }}' }
       - uses: actions/checkout@v2
       - run: swift test --enable-test-discovery --sanitize=thread
   integration-linux:
