--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -15,4 +15,5 @@ jobs:
         host: vapor.codes
         username: vapor
         key: ${{ secrets.VAPOR_CODES_SSH_KEY }}
+        command_timeout: 20m
         script: ./github-actions/deploy-api-docs.sh
