--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,7 @@ jobs:
           git clone https://github.com/git/git -bv2.28.0 --depth 1 && cd git
           make prefix=/usr -j all install NO_OPENSSL=1 NO_EXPAT=1 NO_TCLTK=1 NO_GETTEXT=1 NO_PERL=1
       - uses: actions/checkout@v2
-      - run: swift test --enable-test-discovery --sanitize=thread --verbose
+      - run: swift test --enable-test-discovery --sanitize=thread
   macos:
     strategy:
       fail-fast: false
@@ -41,7 +41,7 @@ jobs:
       - uses: maxim-lobanov/setup-xcode@v1.1
         with: { 'xcode-version': '${{ matrix.xcodever }}' }
       - uses: actions/checkout@v2
-      - run: swift test --enable-test-discovery --sanitize=thread --verbose
+      - run: swift test --enable-test-discovery --sanitize=thread
   integration-linux:
     runs-on: ubuntu-latest
     container: swift:5.3-focal
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v2
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
-      - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread --verbose
+      - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
   integration-macos:
     runs-on: macos-latest
     steps:
@@ -62,4 +62,4 @@ jobs:
       - uses: actions/checkout@v2
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
-      - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread --verbose
+      - run: swift test --package-path vapor --enable-test-discovery --sanitize=thread
