--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,11 +9,11 @@ jobs:
        with_tsan: true
   integration-linux:
     runs-on: ubuntu-latest
-    container: swift:5.6-focal
+    container: swift:5.7-focal
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { path: console-kit }
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery
@@ -22,9 +22,19 @@ jobs:
     steps:
       - uses: maxim-lobanov/setup-xcode@v1.1
         with: { 'xcode-version': 'latest' }
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { path: console-kit }
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
       - run: swift test --package-path vapor --enable-test-discovery
+  test-exports:
+      name: Test exports
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out Vapor
+          uses: actions/checkout@v3
+          with:
+            fetch-depth: 0
+        - name: Build
+          run: swift build -Xswiftc -DBUILDING_DOCC
