--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,7 +32,7 @@ jobs:
       name: Test exports
       runs-on: ubuntu-latest
       steps:
-        - name: Check out Vapor
+        - name: Check out package
           uses: actions/checkout@v3
           with:
             fetch-depth: 0
