Update minimum Swift version to match Vapor, fixup CI, cleanup README, fix platform and Swift version conditions, remove Concurrency guards

--- a/.github/workflows/api-docs.yml
+++ b/.github/workflows/api-docs.yml
@@ -11,4 +11,4 @@ jobs:
      with:
        package_name: console-kit
        modules: ConsoleKit
-       pathsToInvalidate: /console-kit
+       pathsToInvalidate: /consolekit/*
