--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,30 +1,22 @@
 name: test
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 on:
-- pull_request
+  pull_request: { types: [opened, reopened, synchronize, ready_for_review] }
+  push: { branches: [ main ] }
+
 jobs:
   unit-tests:
-     uses: vapor/ci/.github/workflows/run-unit-tests.yml@reusable-workflows
-     with:
-       with_coverage: false
-       with_tsan: true
-  integration-linux:
+     uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
+
+  integration-check:
     runs-on: ubuntu-latest
-    container: swift:5.7-focal
+    container: swift:jammy
     steps:
       - uses: actions/checkout@v3
         with: { path: console-kit }
       - uses: actions/checkout@v3
         with: { repository: 'vapor/vapor', path: vapor }
       - run: swift package --package-path vapor edit console-kit --path console-kit
-      - run: swift test --package-path vapor --enable-test-discovery
-  integration-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: maxim-lobanov/setup-xcode@v1.1
-        with: { 'xcode-version': 'latest' }
-      - uses: actions/checkout@v3
-        with: { path: console-kit }
-      - uses: actions/checkout@v3
-        with: { repository: 'vapor/vapor', path: vapor }
-      - run: swift package --package-path vapor edit console-kit --path console-kit
-      - run: swift test --package-path vapor --enable-test-discovery
+      - run: swift test --package-path vapor
