--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,7 @@ on:
 jobs:
   unit-tests:
      uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
+     secrets: inherit
 
   integration-check:
     runs-on: ubuntu-latest
