--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
           # https://www.reddit.com/r/archlinux/comments/6qu4jt/comment/dl1t5m9/
           pacman -Sy --needed --noconfirm sudo git base-devel patchelf
           useradd builduser -m && passwd -d builduser && echo 'builduser ALL=(ALL) ALL' >> /etc/sudoers
-          sudo -u builduser bash -c -D ~builduser \
+          sudo -u builduser bash -D ~builduser -c \
             'git clone https://aur.archlinux.org/swift-bin.git && cd swift-bin && sed -i~ "s/swiftc;/swiftc llvm-cov;/" PKGBUILD && makepkg -si --noconfirm swift-bin'
       - name: Run unit tests
         run: |
