Add Windows unit tests to CI workflow.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,6 +9,8 @@ on:
 jobs: 
   unit-tests:
      uses: vapor/ci/.github/workflows/run-unit-tests.yml@main
+     with:
+        with_windows: true
      secrets: inherit
 
   integration-check:
